test/TestPhases/typechecker/invalid/NoMagicCasting3.blc
module

function noMagicCasting()
    var a: int64 = -128

    var c: int16 = a
    var d: int8 = a
    var e: int32 = a
end
